Address code review

--- a/generators/templates/styles.ts.hbs
+++ b/generators/templates/styles.ts.hbs
@@ -1,6 +1,3 @@
 import styled from 'styled-components'
 
-export const Wrapper = styled.main`
-  color: white;
-  background-color: #06092b;
-`
+export const Wrapper = styled.main``
